# paper-slack-bot

./: .gitignore  README.md  config.example.yml  manifest.json  pyproject.toml
.github/workflows/: daily_post.yml
src/paper_slack_bot/: __init__.py  config.py  main.py
src/paper_slack_bot/filtering/: __init__.py  llm_filter.py
src/paper_slack_bot/search/: __init__.py  journal_filter.py  paper_fetcher.py  search_engine.py
src/paper_slack_bot/slack/: bot.py  formatter.py
src/paper_slack_bot/storage/: __init__.py  database.py
tests/: test_bot.py  test_database.py  test_formatter.py  test_journal_filter.py  test_llm_filter.py  test_paper_fetcher.py  test_search_engine.py
